lender/tests/fail/skip_invariant.rs
// Test that Skip with an invariant lend type fails covariance check.

use std::cell::Cell;

use lender::{Lend, Lender, Lending};

struct InvariantSkip<L> {
    lender: L,
    n: usize,
}

impl<'lend, L> Lending<'lend> for InvariantSkip<L> {
    type Lend = &'lend Cell<Option<&'lend String>>;
}

impl<L> Lender for InvariantSkip<L> {
    lender::covariance_check!();

    fn next(&mut self) -> Option<Lend<'_, Self>> {
        None
    }
}

fn main() {}
